spacing fix

--- a/static/style.scss
+++ b/static/style.scss
@@ -485,7 +485,6 @@ body {
     font-family: "Roboto";
     position: absolute;
     right: 0;
-    margin-top: 5px;
     background-color: #f9f9f9;
     min-width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
